Fix overflow

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -73,6 +73,7 @@ body {
 
 .approach-section {
   position: relative;
+  overflow: hidden;
   .approach-background {
     width: 200%;
     height: 100%;
